[gd_scene load_steps=8 format=3 uid="uid://cklwwr4htvoa0"]

[ext_resource type="Script" uid="uid://cl53u7hsjfh00" path="res://addons/PowerKey/Editor/Inspector/PKExp Dropdown.gd" id="1_hvuxj"]
[ext_resource type="StyleBox" uid="uid://dmx54n3nof1ea" path="res://addons/PowerKey/Editor/Inspector/dropdown_panel_normal.tres" id="2_es0o0"]
[ext_resource type="StyleBox" uid="uid://2oldccxcjxrf" path="res://addons/PowerKey/Editor/Inspector/dropdown_panel_hover.tres" id="2_flkrg"]
[ext_resource type="Texture2D" uid="uid://1um78pocay0q" path="res://addons/PowerKey/Editor/Inspector/collapsed.svg" id="2_m5lue"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7nutv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hvuxj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lglc1"]

[node name="PKExp Dropdown" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hvuxj")

[node name="Dropdown Button Panel" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7nutv")

[node name="Button" type="Button" parent="Dropdown Button Panel"]
layout_mode = 2
tooltip_text = "PKExpressions"
theme_override_styles/focus = SubResource("StyleBoxEmpty_hvuxj")
theme_override_styles/hover = ExtResource("2_flkrg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lglc1")
theme_override_styles/normal_mirrored = ExtResource("2_es0o0")
theme_override_styles/normal = ExtResource("2_es0o0")
alignment = 0

[node name="Visuals" type="HBoxContainer" parent="Dropdown Button Panel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Sep" type="VSeparator" parent="Dropdown Button Panel/Visuals"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 2

[node name="Icon" type="TextureRect" parent="Dropdown Button Panel/Visuals"]
unique_name_in_owner = true
custom_minimum_size = Vector2(13, 0)
layout_mode = 2
texture = ExtResource("2_m5lue")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="Dropdown Button Panel/Visuals"]
unique_name_in_owner = true
layout_mode = 2
text = "PKExpressions"

[node name="Content" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Indent" type="VSeparator" parent="Content"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Items" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Text Editor" type="TextEdit" parent="Content/Items"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "PowerKey Expressions. Separate each expression with a new line."
placeholder_text = "Enter PKExpressions here..."
scroll_smooth = true
caret_blink = true
caret_multiple = false
draw_tabs = true

[node name="Validation" type="PanelContainer" parent="Content/Items"]
layout_mode = 2

[node name="Label" type="Label" parent="Content/Items/Validation"]
layout_mode = 2
text = "Looks good! No parsing errors found."
autowrap_mode = 2

[node name="Actions" type="HFlowContainer" parent="Content/Items"]
layout_mode = 2

[node name="Button Store Parsed" type="CheckButton" parent="Content/Items/Actions"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Store parsed PKExpression data on the Node.
This removes the need for it to parse during run-time, however will take up more space."
text = "Store Parsed"

[connection signal="button_down" from="Dropdown Button Panel/Button" to="." method="_on_dropdown_button_down"]
[connection signal="text_changed" from="Content/Items/Text Editor" to="." method="_on_text_editor_text_changed"]
[connection signal="toggled" from="Content/Items/Actions/Button Store Parsed" to="." method="_on_button_store_parsed_toggled"]
